--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -12,15 +12,14 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:15.009749Z",
-     "start_time": "2019-08-24T15:07:13.709187Z"
+     "end_time": "2019-08-24T18:13:54.468189Z",
+     "start_time": "2019-08-24T18:13:53.640410Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import swifter\n",
     "import Levenshtein as lev\n",
     "import random\n",
     "\n",
@@ -36,8 +35,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:15.020452Z",
-     "start_time": "2019-08-24T15:07:15.012320Z"
+     "end_time": "2019-08-24T18:13:54.476613Z",
+     "start_time": "2019-08-24T18:13:54.470487Z"
     }
    },
    "outputs": [],
@@ -52,8 +51,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:19.815400Z",
-     "start_time": "2019-08-24T15:07:15.026791Z"
+     "end_time": "2019-08-24T18:13:57.758881Z",
+     "start_time": "2019-08-24T18:13:54.482235Z"
     },
     "code_folding": []
    },
@@ -67,8 +66,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:19.925897Z",
-     "start_time": "2019-08-24T15:07:19.819211Z"
+     "end_time": "2019-08-24T18:13:57.807869Z",
+     "start_time": "2019-08-24T18:13:57.761554Z"
     }
    },
    "outputs": [
@@ -246,8 +245,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:20.422114Z",
-     "start_time": "2019-08-24T15:07:19.933561Z"
+     "end_time": "2019-08-24T18:13:58.032384Z",
+     "start_time": "2019-08-24T18:13:57.812110Z"
     }
    },
    "outputs": [
@@ -410,8 +409,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:22.029070Z",
-     "start_time": "2019-08-24T15:07:20.436012Z"
+     "end_time": "2019-08-24T18:13:58.965955Z",
+     "start_time": "2019-08-24T18:13:58.038249Z"
     }
    },
    "outputs": [
@@ -556,8 +555,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:28.965420Z",
-     "start_time": "2019-08-24T15:07:22.032522Z"
+     "end_time": "2019-08-24T18:14:03.822742Z",
+     "start_time": "2019-08-24T18:13:58.972148Z"
     }
    },
    "outputs": [
@@ -702,15 +701,15 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:28.974811Z",
-     "start_time": "2019-08-24T15:07:28.970949Z"
+     "end_time": "2019-08-24T18:14:03.835212Z",
+     "start_time": "2019-08-24T18:14:03.829525Z"
     }
    },
    "outputs": [],
    "source": [
-    "# types\n",
-    "# skewness\n",
-    "# correlations: pearson's r, spearman's p, kendall's t, phik, cramer's v"
+    "# TODO types\n",
+    "# TODO skewness\n",
+    "# TODO correlations: pearson's r, spearman's p, kendall's t, phik, cramer's v"
    ]
   },
   {
@@ -718,8 +717,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:29.517949Z",
-     "start_time": "2019-08-24T15:07:28.979835Z"
+     "end_time": "2019-08-24T18:14:04.176159Z",
+     "start_time": "2019-08-24T18:14:03.839311Z"
     }
    },
    "outputs": [],
@@ -734,14 +733,14 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:29.526830Z",
-     "start_time": "2019-08-24T15:07:29.520500Z"
+     "end_time": "2019-08-24T18:14:04.571830Z",
+     "start_time": "2019-08-24T18:14:04.178495Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Index incidents using Incident ID\n",
-    "data.set_index(\"incident_id\", inplace=True)"
+    "data.set_index(\"incident_id\", inplace=True)\n",
+    "data = data.drop([\"incident_url_fields_missing\", \"incident_url\", \"source_url\", \"sources\"], axis=1)"
    ]
   },
   {
@@ -749,15 +748,15 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:30.108937Z",
-     "start_time": "2019-08-24T15:07:29.531686Z"
-    },
-    "code_folding": []
+     "end_time": "2019-08-24T18:14:04.838654Z",
+     "start_time": "2019-08-24T18:14:04.573959Z"
+    }
    },
    "outputs": [],
    "source": [
-    "# Delete columns that are irrelevant to the analysis\n",
-    "data = data.drop([\"incident_url_fields_missing\", \"incident_url\", \"source_url\", \"sources\"], axis=1)"
+    "data[\"date\"] = pd.to_datetime(data[\"date\"])\n",
+    "data = data.sort_values(by=[\"date\"])\n",
+    "data = data[['date', 'state', 'city_or_county', 'address', 'location_description', 'n_killed', 'n_injured', 'incident_characteristics', 'n_guns_involved', 'gun_stolen', 'gun_type', 'notes', 'participant_name', 'participant_age', 'participant_age_group', 'participant_gender', 'participant_status', 'participant_type', 'participant_relationship']]"
    ]
   },
   {
@@ -765,112 +764,27 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:30.460832Z",
-     "start_time": "2019-08-24T15:07:30.111019Z"
+     "end_time": "2019-08-24T18:14:28.769379Z",
+     "start_time": "2019-08-24T18:14:04.840828Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Convert dates to datetime objects\n",
-    "data[\"date\"] = pd.to_datetime(data[\"date\"])\n",
-    "\n",
-    "# Reorder newly created dataframe\n",
-    "data = data.sort_values(by=[\"date\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:30.572160Z",
-     "start_time": "2019-08-24T15:07:30.465901Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
-    "# Rearrange the columns for readibility\n",
-    "data = data[['date', 'state', 'city_or_county', 'address', 'location_description', 'n_killed', 'n_injured', \n",
-    "             'incident_characteristics', 'n_guns_involved', 'gun_stolen', 'gun_type', 'notes', \n",
-    "             'participant_name', 'participant_age', 'participant_age_group', 'participant_gender', \n",
-    "             'participant_status', 'participant_type', 'participant_relationship']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:31.616852Z",
-     "start_time": "2019-08-24T15:07:30.577354Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "data[[\"suspect_name\", \"suspect_age\", \"suspect_age_group\", \"suspect_gender\", \"suspect_status\", \"n_suspects\"]] = pd.DataFrame([[np.nan for _ in range(6)] for _ in range(data.shape[0])], index=data.index)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:40.220320Z",
-     "start_time": "2019-08-24T15:07:31.619782Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "# Convert participant info into Python data structures (dictionary/list)\n",
+    "data[[\"suspect_name\", \"suspect_age\", \"suspect_age_group\", \"suspect_gender\", \"suspect_status\", \"n_suspects\"]] = pd.DataFrame([[np.nan for _ in range(6)] for _ in range(data.shape[0])], index=data.index)\n",
     "for col in ['gun_stolen', 'gun_type', 'participant_name', 'participant_age', 'participant_age_group', 'participant_gender', 'participant_relationship', 'participant_status', 'participant_type']:\n",
-    "    data[col] = data[col].apply(de.split_into_str_dict)\n",
-    "data['participant_age'] = data['participant_age'].apply(de.convert_dict_to_int)\n",
-    "data['incident_characteristics'] = data['incident_characteristics'].apply(de.split_into_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:55.198209Z",
-     "start_time": "2019-08-24T15:07:40.224225Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "    data[col] = data[col].apply(de.split_into_dict)\n",
+    "data['participant_age'] = data['participant_age'].apply(de.convert_vals_to_int)\n",
+    "data['incident_characteristics'] = data['incident_characteristics'].apply(de.split_into_list)\n",
+    "\n",
     "data_list = data.values\n",
-    "data = de.clean(data_list, data.index, data.columns, data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:56.950849Z",
-     "start_time": "2019-08-24T15:07:55.200142Z"
-    },
-    "code_folding": []
-   },
-   "outputs": [],
-   "source": [
+    "data = de.populate_suspect_columns(data)\n",
+    "\n",
     "data[\"participant_type\"] = data[\"participant_type\"].apply(lambda x: de.replace_dict(x))\n",
     "data.rename(columns = {\"participant_type\": \"n_victims\"}, inplace = True)\n",
-    "data.rename(columns = {\"participant_relationshiop\": \"victim_suspect_relationship\"}, inplace = True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2019-08-24T15:07:57.884940Z",
-     "start_time": "2019-08-24T15:07:56.952901Z"
-    }
-   },
-   "outputs": [],
-   "source": [
+    "data.rename(columns = {\"participant_relationshiop\": \"victim_suspect_relationship\"}, inplace = True)\n",
+    "\n",
+    "# Change the name of columns from participant_ to victim_\n",
     "for suffix in [\"name\", \"age\", \"age_group\", \"gender\", \"relationship\", \"status\"]:\n",
     "    data.rename(columns = {\"participant_\" + suffix: \"victim_\" + suffix}, inplace = True)"
    ]
@@ -2309,26 +2223,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:08:20.019628Z",
-     "start_time": "2019-08-24T15:07:57.886966Z"
+     "end_time": "2019-08-24T18:14:42.044571Z",
+     "start_time": "2019-08-24T18:14:28.771985Z"
     }
    },
    "outputs": [],
    "source": [
-    "# TODO optimize this\n",
     "data['address'] = data['address'].apply(de.clean_address_string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:08:20.661639Z",
-     "start_time": "2019-08-24T15:08:20.021573Z"
+     "end_time": "2019-08-24T18:14:42.194813Z",
+     "start_time": "2019-08-24T18:14:42.047272Z"
     },
     "code_folding": []
    },
@@ -2349,25 +2262,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:08:23.878893Z",
-     "start_time": "2019-08-24T15:08:20.676694Z"
+     "end_time": "2019-08-24T18:14:43.226069Z",
+     "start_time": "2019-08-24T18:14:42.212187Z"
     }
    },
    "outputs": [],
    "source": [
-    "victims_2013 = de.yearly_victims(data.values, 2013, data)"
+    "victims_2013 = de.victims_by_year(data, 2013)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:08:23.889069Z",
-     "start_time": "2019-08-24T15:08:23.880957Z"
+     "end_time": "2019-08-24T18:14:43.236625Z",
+     "start_time": "2019-08-24T18:14:43.227990Z"
     }
    },
    "outputs": [
@@ -2387,19 +2300,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-24T15:08:24.022717Z",
-     "start_time": "2019-08-24T15:08:23.897921Z"
+     "end_time": "2019-08-24T18:14:43.390728Z",
+     "start_time": "2019-08-24T18:14:43.239602Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Create a mass shooting dataset for further analysis\n",
+    "# Create a mass shooting dataset for further analysis an remove the 2013 incidents from the dataset\n",
     "mass_shootings = data[(data[\"n_killed\"] + data[\"n_injured\"] - data[\"n_suspects\"]) >= 4]\n",
-    "\n",
-    "# Remove 2013 incidents from the dataset\n",
     "data = data[data[\"date\"].dt.year != 2013]"
    ]
   },
@@ -2419,11 +2330,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-23T09:44:42.633124Z",
-     "start_time": "2019-08-23T09:44:42.619747Z"
+     "end_time": "2019-08-24T15:14:26.886771Z",
+     "start_time": "2019-08-24T15:14:26.879881Z"
     }
    },
    "outputs": [],
