Added Pearson's correlation matrix

--- a/gun-violence.ipynb
+++ b/gun-violence.ipynb
@@ -40,24 +40,24 @@
     "9. **incident_url**: GVA URL corresponding to the incident (type *object*)\n",
     "10. **incident_url_fields_missing**: boolean indicating whether the incident URL field is missing (type *bool*)\n",
     "11. **latitude**: latitude of the location of the attach (type *float*)\n",
-    "12. **location_description**: (type *object)\n",
+    "12. **location_description**: characteristics of the location of the attack (type *object)\n",
     "13. **longitude**: longitude of the location of the attach (type *float*)\n",
     "14. **n_guns_involved**: number of guns involved in the attack (type *float*)\n",
-    "15. **n_injured**: number of people injured in the attack (type *int*)\t\n",
-    "16. **n_killed**: (type *int*)\n",
+    "15. **n_injured**: total number of people injured in the attack (type *int*)\t\n",
+    "16. **n_killed**: total number of people killed in the attack (type *int*)\n",
     "17. **notes**: miscellaneous notes about the incident (type *object)\n",
-    "18. **participant_age**: (type *object)\n",
-    "19. **participant_age_group**: (type *object)\n",
-    "20. **participant_gender**: (type *object)\n",
-    "21. **participant_name**: (type *object)\n",
-    "22. **participant_relationship**: (type *object)\n",
-    "23. **participant_status**: (type *object)\n",
-    "24. **participant_type**: (type *object)\n",
-    "25. **source_url**: (type *object)\n",
-    "26. **sources**: (type *object)\n",
-    "27. **state**: (type *object)\n",
-    "28. **state_house_district**: (type *float*) \t\n",
-    "29. **state_senate_district**: (type *float*)"
+    "18. **participant_age**: the ages of the participants involved in the attack (type *object)\n",
+    "19. **participant_age_group**: the age groups the participants involved in the attack fall within (type *object)\n",
+    "20. **participant_gender**: the genders of the participants involved in the attack (type *object)\n",
+    "21. **participant_name**: the names of the participants involved in the attack (type *object)\n",
+    "22. **participant_relationship**: the relationships between the suspect and the victims of the attack(type *object)\n",
+    "23. **participant_status**: extent of harm done to the participants of the attack (type *object)\n",
+    "24. **participant_type**: type of the participant, e.g. victim, suspect, etc.(type *object)\n",
+    "25. **source_url**: URL used as a primary source for the data (type *object)\n",
+    "26. **sources**: reporting sources (type *object)\n",
+    "27. **state**: state of the crime (type *object)\n",
+    "28. **state_house_district**: voting house district (type *float*) \t\n",
+    "29. **state_senate_district**: territorial district from which a senator to a state legislature is elected (type *float*)"
    ]
   },
   {
@@ -65,8 +65,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:32.556878Z",
-     "start_time": "2019-08-29T23:19:31.103460Z"
+     "end_time": "2019-08-30T16:27:22.201389Z",
+     "start_time": "2019-08-30T16:27:20.204967Z"
     }
    },
    "outputs": [],
@@ -90,8 +90,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:32.581353Z",
-     "start_time": "2019-08-29T23:19:32.565326Z"
+     "end_time": "2019-08-30T16:27:22.212610Z",
+     "start_time": "2019-08-30T16:27:22.205272Z"
     }
    },
    "outputs": [],
@@ -106,8 +106,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:38.210018Z",
-     "start_time": "2019-08-29T23:19:32.588209Z"
+     "end_time": "2019-08-30T16:27:26.581180Z",
+     "start_time": "2019-08-30T16:27:22.217752Z"
     },
     "code_folding": []
    },
@@ -128,8 +128,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:38.909843Z",
-     "start_time": "2019-08-29T23:19:38.215720Z"
+     "end_time": "2019-08-30T16:27:26.890611Z",
+     "start_time": "2019-08-30T16:27:26.583609Z"
     }
    },
    "outputs": [],
@@ -144,8 +144,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:38.927087Z",
-     "start_time": "2019-08-29T23:19:38.916135Z"
+     "end_time": "2019-08-30T16:27:26.901826Z",
+     "start_time": "2019-08-30T16:27:26.892621Z"
     }
    },
    "outputs": [
@@ -169,8 +169,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:38.986489Z",
-     "start_time": "2019-08-29T23:19:38.931047Z"
+     "end_time": "2019-08-30T16:27:26.967624Z",
+     "start_time": "2019-08-30T16:27:26.905898Z"
     }
    },
    "outputs": [
@@ -348,8 +348,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:38.995864Z",
-     "start_time": "2019-08-29T23:19:38.990473Z"
+     "end_time": "2019-08-30T16:27:26.982165Z",
+     "start_time": "2019-08-30T16:27:26.974556Z"
     }
    },
    "outputs": [],
@@ -372,8 +372,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:39.099301Z",
-     "start_time": "2019-08-29T23:19:39.002089Z"
+     "end_time": "2019-08-30T16:27:27.071459Z",
+     "start_time": "2019-08-30T16:27:26.999601Z"
     }
    },
    "outputs": [
@@ -499,8 +499,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:40.325415Z",
-     "start_time": "2019-08-29T23:19:39.103524Z"
+     "end_time": "2019-08-30T16:27:27.629971Z",
+     "start_time": "2019-08-30T16:27:27.076390Z"
     }
    },
    "outputs": [
@@ -666,8 +666,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:42.824615Z",
-     "start_time": "2019-08-29T23:19:40.329812Z"
+     "end_time": "2019-08-30T16:27:28.959306Z",
+     "start_time": "2019-08-30T16:27:27.636661Z"
     }
    },
    "outputs": [
@@ -741,8 +741,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:44.304983Z",
-     "start_time": "2019-08-29T23:19:42.829404Z"
+     "end_time": "2019-08-30T16:27:30.207751Z",
+     "start_time": "2019-08-30T16:27:28.962196Z"
     }
    },
    "outputs": [
@@ -832,8 +832,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:45.538744Z",
-     "start_time": "2019-08-29T23:19:44.309247Z"
+     "end_time": "2019-08-30T16:27:31.134383Z",
+     "start_time": "2019-08-30T16:27:30.210281Z"
     }
    },
    "outputs": [
@@ -978,15 +978,15 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:49.788436Z",
-     "start_time": "2019-08-29T23:19:45.558028Z"
+     "end_time": "2019-08-30T16:27:36.439897Z",
+     "start_time": "2019-08-30T16:27:31.138687Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1a23fcdf98>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a1d2c6208>"
       ]
      },
      "execution_count": 13,
@@ -1016,15 +1016,15 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:51.857897Z",
-     "start_time": "2019-08-29T23:19:49.792563Z"
+     "end_time": "2019-08-30T16:27:38.786015Z",
+     "start_time": "2019-08-30T16:27:36.451905Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x10c703d30>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x104c61e80>"
       ]
      },
      "execution_count": 14,
@@ -1053,8 +1053,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:56.879299Z",
-     "start_time": "2019-08-29T23:19:51.861202Z"
+     "end_time": "2019-08-30T16:27:43.447501Z",
+     "start_time": "2019-08-30T16:27:38.787979Z"
     }
    },
    "outputs": [
@@ -1196,16 +1196,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-29T23:19:56.888951Z",
-     "start_time": "2019-08-29T23:19:56.883459Z"
+     "end_time": "2019-08-30T16:36:21.111223Z",
+     "start_time": "2019-08-30T16:36:20.986889Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>n_killed</th>\n",
+       "      <th>n_injured</th>\n",
+       "      <th>n_guns_involved</th>\n",
+       "      <th>congressional_district</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>state_house_district</th>\n",
+       "      <th>state_senate_district</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>n_killed</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.097048</td>\n",
+       "      <td>-0.019808</td>\n",
+       "      <td>0.053650</td>\n",
+       "      <td>-0.078088</td>\n",
+       "      <td>-0.061354</td>\n",
+       "      <td>-0.006015</td>\n",
+       "      <td>-0.010650</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n_injured</th>\n",
+       "      <td>0.097048</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.001932</td>\n",
+       "      <td>-0.006103</td>\n",
+       "      <td>-0.007564</td>\n",
+       "      <td>0.020161</td>\n",
+       "      <td>-0.030355</td>\n",
+       "      <td>-0.044294</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>n_guns_involved</th>\n",
+       "      <td>-0.019808</td>\n",
+       "      <td>0.001932</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.021180</td>\n",
+       "      <td>-0.001364</td>\n",
+       "      <td>-0.016227</td>\n",
+       "      <td>-0.003324</td>\n",
+       "      <td>0.004247</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>congressional_district</th>\n",
+       "      <td>0.053650</td>\n",
+       "      <td>-0.006103</td>\n",
+       "      <td>0.021180</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.259486</td>\n",
+       "      <td>-0.215597</td>\n",
+       "      <td>0.228827</td>\n",
+       "      <td>0.309116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>latitude</th>\n",
+       "      <td>-0.078088</td>\n",
+       "      <td>-0.007564</td>\n",
+       "      <td>-0.001364</td>\n",
+       "      <td>-0.259486</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.056711</td>\n",
+       "      <td>-0.237958</td>\n",
+       "      <td>0.028611</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>longitude</th>\n",
+       "      <td>-0.061354</td>\n",
+       "      <td>0.020161</td>\n",
+       "      <td>-0.016227</td>\n",
+       "      <td>-0.215597</td>\n",
+       "      <td>-0.056711</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.236450</td>\n",
+       "      <td>0.113408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state_house_district</th>\n",
+       "      <td>-0.006015</td>\n",
+       "      <td>-0.030355</td>\n",
+       "      <td>-0.003324</td>\n",
+       "      <td>0.228827</td>\n",
+       "      <td>-0.237958</td>\n",
+       "      <td>0.236450</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.431299</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>state_senate_district</th>\n",
+       "      <td>-0.010650</td>\n",
+       "      <td>-0.044294</td>\n",
+       "      <td>0.004247</td>\n",
+       "      <td>0.309116</td>\n",
+       "      <td>0.028611</td>\n",
+       "      <td>0.113408</td>\n",
+       "      <td>0.431299</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        n_killed  n_injured  n_guns_involved  congressional_district  latitude  longitude  state_house_district  state_senate_district\n",
+       "n_killed                1.000000   0.097048        -0.019808                0.053650 -0.078088  -0.061354             -0.006015              -0.010650\n",
+       "n_injured               0.097048   1.000000         0.001932               -0.006103 -0.007564   0.020161             -0.030355              -0.044294\n",
+       "n_guns_involved        -0.019808   0.001932         1.000000                0.021180 -0.001364  -0.016227             -0.003324               0.004247\n",
+       "congressional_district  0.053650  -0.006103         0.021180                1.000000 -0.259486  -0.215597              0.228827               0.309116\n",
+       "latitude               -0.078088  -0.007564        -0.001364               -0.259486  1.000000  -0.056711             -0.237958               0.028611\n",
+       "longitude              -0.061354   0.020161        -0.016227               -0.215597 -0.056711   1.000000              0.236450               0.113408\n",
+       "state_house_district   -0.006015  -0.030355        -0.003324                0.228827 -0.237958   0.236450              1.000000               0.431299\n",
+       "state_senate_district  -0.010650  -0.044294         0.004247                0.309116  0.028611   0.113408              0.431299               1.000000"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO correlations: pearson's r, spearman's p, kendall's t, phik, cramer's v"
+    "# Pearson's correlation coefficient\n",
+    "df[[\"n_killed\", \"n_injured\", \"n_guns_involved\", \"congressional_district\", \"latitude\", \"longitude\", \"state_house_district\", \"state_senate_district\"]].corr(method=\"pearson\")"
    ]
   },
   {
